--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -21,7 +21,8 @@
 #    docker build -f docker/Dockerfile --build-arg LIBOLM_VERSION=3.2.10 .
 #
 
-ARG PYTHON_VERSION=3.10
+
+ARG PYTHON_VERSION=3.8
 FROM docker.io/python:${PYTHON_VERSION}-alpine
 
 ##
@@ -29,7 +30,7 @@ FROM docker.io/python:${PYTHON_VERSION}-alpine
 ##
 
 # Install libolm build dependencies
-ARG LIBOLM_VERSION=3.2.10
+ARG LIBOLM_VERSION=3.2.16
 RUN apk add --no-cache \
     make \
     cmake \
@@ -53,19 +54,35 @@ RUN apk add --no-cache \
 
 # Install python runtime modules. We do this before copying the source code
 # such that these dependencies can be cached
-RUN mkdir -p /src/my_project_name
-COPY my_project_name/__init__.py /src/my_project_name/
-COPY README.md my-project-name /src/
-COPY setup.py /src/setup.py
-RUN pip install -e "/src/.[postgres]"
+RUN mkdir -p /app/nio_channel_bot
+COPY nio_channel_bot/__init__.py /app/nio_channel_bot/
+COPY README.md main.py /app/
 
-# Now copy the source code
-COPY my_project_name/*.py /src/my_project_name/
-COPY *.py /src/
+# Build the dependencies
+RUN pip install --upgrade pip
+# Pin poetry version so updates don't break the build
+RUN pip install poetry==1.8.2
 
+# Disable poetry venv creation in builder.
+ENV POETRY_NO_INTERACTION=1 \
+    POETRY_VIRTUALENVS_CREATE=0
+
+WORKDIR /app
+COPY pyproject.toml poetry.lock /app/
+
+# Export poetry.lock to requirements file omitting hashes for faster dependency resolution
+# And building libraries in external folder /python-libs
+RUN poetry export --without-hashes --format=requirements.txt > requirements.txt
+# Install production dependencies
+RUN pip install -r requirements.txt
 # Specify a volume that holds the config file, SQLite3 database,
 # and the matrix-nio store
+
+# Now copy the source code
+COPY nio_channel_bot/*.py /app/nio_channel_bot/
+COPY *.py *.md /app/
+
 VOLUME ["/data"]
 
 # Start the app
-ENTRYPOINT ["my-project-name", "/data/config.yaml"]
+ENTRYPOINT ["python", "/app/main.py", "/data/config.yaml"]
