--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -39,7 +39,8 @@ RUN apk add --no-cache \
     git \
     libffi-dev \
     yaml-dev \
-    python3-dev
+    python3-dev \
+    libmagic
 
 # Build libolm
 COPY docker/build_and_install_libolm.sh /scripts/
